--- a/SimuladorEscalonador/SimuladorEscalonador/SimuladorEscalonador.csproj
+++ b/SimuladorEscalonador/SimuladorEscalonador/SimuladorEscalonador.csproj
@@ -46,7 +46,7 @@
     <Compile Include="Estados.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="MyList.cs" />
-    <Compile Include="Process.cs" />
+    <Compile Include="Processo.cs" />
     <Compile Include="ProcessReader.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
