--- a/SimuladorEscalonador/SimuladorEscalonador/SimuladorEscalonador.csproj
+++ b/SimuladorEscalonador/SimuladorEscalonador/SimuladorEscalonador.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Escalonador.cs" />
     <Compile Include="Estados.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="MyList.cs" />
@@ -50,6 +51,7 @@
     <Compile Include="ProcessReader.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TimerTick.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
