--- a/SimuladorEscalonador/SimuladorEscalonador/SimuladorEscalonador.csproj
+++ b/SimuladorEscalonador/SimuladorEscalonador/SimuladorEscalonador.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Escalonador.cs" />
     <Compile Include="Estados.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="MyList.cs" />
