acredito que finalizado, passa por todas as filas e executa todos os processos em suas devidas prioridades. como fica a questão de mudar a prioridade de cada processo eu nao sei.

--- a/SimuladorEscalonador/SimuladorEscalonador/SimuladorEscalonador.csproj
+++ b/SimuladorEscalonador/SimuladorEscalonador/SimuladorEscalonador.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Estados.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="MyList.cs" />
+    <Compile Include="Processador.cs" />
     <Compile Include="Processo.cs" />
     <Compile Include="ProcessReader.cs" />
     <Compile Include="Program.cs" />
